added FoodlocatorFragment, including location service, async http call searching for stores

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="google_places_nearby_key" >
+        AIzaSyDgUm1jr6yB8Rx09fWgk_bRJLYUUFMxoYk
+    </string>
 </resources>
